added all sections remaining footer

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,13 +1,24 @@
 @use '../custom' as *;
 @use '../components/mixins' as *;
+
 .menu {
   @include gradient;
 
+
   li {
-    padding: 0 0.7rem;
+    padding: 0 0.7rem 0;
+
     a {
       color: $white !important;
-      font-weight: 600;
+      padding: 0.7rem;
+      text-transform: capitalize;
+      font-weight: 600;      
+
     }
+    &:hover {
+      color: $white;
+    }
+
   }
+  
 }
