--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -1,5 +1,19 @@
-@use '../custom' as *~;
+@use '../custom' as *;
 
 @mixin  gradient {
   background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95) );
+}
+
+// ABSOLUTE CENTER 
+@mixin absoluteCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+// TRANSITION PROPERTY 
+@mixin transitionProperty {
+  transition-duration: 1s;
+  transition-property: all;
 }
