--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -22,6 +22,7 @@ $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
+$footer: #151414;
 
 // ACCORDION OVERRIDES
 $accordion-padding-y:                     1.5rem;// LEAVE THE PADDING-Y TO DEFAULT
